Fix for nowrap tags

--- a/web/css/_buttsweater.scss
+++ b/web/css/_buttsweater.scss
@@ -621,6 +621,9 @@ td.emulate { background-color: #40A662; color: #fff; }
 	vertical-align: middle;
 	white-space: nowrap;
 }
+.tags {
+	white-space: nowrap;
+}
 .tag.video .length,
 .tag.audio .length {
 	text-transform: none;
